--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -40,3 +40,15 @@
  .App-bg-dark {
    background-color: black;
  }
+
+ .card-highlighted:hover {
+   cursor: pointer;
+   background-color: rgb(250, 250, 250);
+   border-radius: 1px;
+ }
+
+ .card-selected {
+   cursor: pointer;
+   background-color: rgb(235, 235, 235);
+   border-radius: 1px;
+ }
