--- a/my-app/src/components/landing/landing.css
+++ b/my-app/src/components/landing/landing.css
@@ -2,6 +2,11 @@
     font-size: 5rem
   }
 
+  .landing-logo {
+    height: 100px;
+    width: 100px;
+  }
+
   .landing-background-image {
       background-image: url("");
       background-size: cover;
