--- a/my-app/src/components/twitch/twitch.css
+++ b/my-app/src/components/twitch/twitch.css
@@ -121,10 +121,13 @@ box-sizing: border-box;
 td {
     color: white;
     text-align: center;
+    vertical-align: middle;
 }
 
 th {
     color: rgb(13, 110, 253);
+    width: 10%;
+
 }
 
 .twitch-modal {
