--- a/my-app/src/components/chat/messages.css
+++ b/my-app/src/components/chat/messages.css
@@ -130,3 +130,9 @@
     left: 5px;
     transform: translateY(-50%);
 }
+
+.avatar-sm{
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+}
